# test_bot

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: config.py
src/application/common/: exception.py  gateway.py
src/application/exceptions/: task.py  user.py
src/application/service/: task.py  user.py
src/domain/common/: exceptions.py
src/domain/common/value_objects/: __init__.py  base.py
src/domain/entities/: task.py  user.py
src/domain/exceptions/: user.py
src/domain/value_objects/: login.py  task_state.py  username.py
src/domain/value_objects/user/: login.py
src/infrastructure/db/: factory.py
src/infrastructure/db/gateway/: task.py  user.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 20241031-215520_2debae98f0a9_initial_migration.py
src/infrastructure/db/models/: __init__.py  base.py  task.py  user.py
src/presentation/tg_bot/: Test_tg_bot.session  main.py
src/presentation/tg_bot/fsm/: states.py
src/presentation/tg_bot/handlers/: registration_handler.py  task_handler.py
src/presentation/tg_bot/keyboards/: default_keyboard.py
src/presentation/tg_bot/middleware/: gateway_middleware.py  session_middleware.py
